--- a/index.html
+++ b/index.html
@@ -21,25 +21,27 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="left-side">
-    </div>
-    <div class="right-side">
-      <p class="product-title">Perfume</p>
-      <h1 class="product-name">Gabrielle Essence Eau De Parfum</h1>
-      <p class="product-paragraph">
-        A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of
-        CHANEL.
-      </p>
-      <div class="product-price old-price">
-        <p class="new-product-price">$149.99</p>
+  <main>
+    <div class="container">
+      <div class="left-side">
       </div>
-      <button class="btn">
-        <img src="images/icon-cart.svg" class="cart-icon" alt="cart icon">
-        <p>Add to Cart</p>
-      </button>
+      <div class="right-side">
+        <p class="product-title">Perfume</p>
+        <h1 class="product-name">Gabrielle Essence Eau De Parfum</h1>
+        <p class="product-paragraph">
+          A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of
+          CHANEL.
+        </p>
+        <div class="product-price old-price">
+          <p class="new-product-price">$149.99</p>
+        </div>
+        <a class="btn">
+          <img src="images/icon-cart.svg" class="cart-icon" alt="cart icon">
+          <p>Add to Cart</p>
+        </a>
+      </div>
     </div>
-  </div>
+  </main>
 </body>
 
 </html>
